fix: submenu padding, z-index

--- a/src/components/ProfileMenu/ProfileMenu.module.scss
+++ b/src/components/ProfileMenu/ProfileMenu.module.scss
@@ -13,7 +13,7 @@
   transition: all 0.5s ease;
   width: 230px;
   right: 0;
-  top: 50px;
+  top: 60px;
   border: 1px solid #d1d5dc;
   border-radius: 6px;
   gap: 0;
@@ -107,6 +107,7 @@
   right: 0;
   left: 0;
   background: #ffffff;
+  z-index: 1;
 }
 
 .profileMenu {
